platform-events/main/default/objects/Opportunity__e/Opportunity__e.object-meta.xml
<CustomObject>
    <label>Opportunity</label>
    <pluralLabel>Opportunity</pluralLabel>
</CustomObject>