platform-events/main/default/objects/Opportunity__e/fields/CustomerCode__c.field-meta.xml
<CustomField>
    <fullName>CustomerCode__c</fullName>
    <label>Customer Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>