platform-events/main/default/objects/Opportunity__e/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <label>Payload</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>