platform-events/main/default/objects/Opportunity__e/fields/SalespersonCode__c.field-meta.xml
<CustomField>
    <fullName>SalespersonCode__c</fullName>
    <label>Salesperson Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>