platform-events/main/default/objects/Opportunity__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>